# gameandwatch

./: .cproject  .gitignore  .project  AndroidAppSettings.cfg  AndroidBuild.sh  CMakeLists.txt  GameWatch.sln  GameWatch.vcproj  Makefile.am  autogen.sh  config.h.in  configure.ac  gamewatch_gp2x.cbp  gamewatch_mac.cbp  gamewatch_unix.cbp  gamewatch_win32.cbp  gamewatch_wiz.cbp
android/: .project  AndroidManifest.xml  readme.txt
android/.externalToolBuilders/: gamewatch Native Builder.launch
android/assets/: readme.txt
android/jni/: Application.mk  readme.txt
android/jni/freetype/: Android.mk
android/jni/sdl_gfx/: Android.mk
android/jni/sdl_mixer/: Android.mk
android/jni/sdl_ttf/: Android.mk
android/jni/src/: Android.mk  readme.txt
android/jni/zzip/: Android.mk
android/res/values/: strings.xml
android/src/org/libsdl/app/: SDLActivity.java
cmake/modules/: FindSDL_gfx.cmake  Findzziplib.cmake
data/: Makefile.am
debian/: changelog  control  copyright  rules
doc/: Makefile.am  README  README.android  README.gp2x  README.pandora  README.symbian  README.wiz  gameandwatch.desktop
include/: device.h  gamelist.h  gwdbg.h  linked_ptr.h  menu.h  platform.h
include/devices/: dev_banana.h  dev_condor.h  dev_defendo.h  dev_dkong.h  dev_monkey.h  dev_pancake.h  dev_pirate.h  dev_rollerc.h  dev_sleepwlk.h  deveng_vtech.h  deveng_vtech_banana.h  deveng_vtech_monkey.h
include/plat/: plat_android.h  plat_gp2x.h  plat_ios.h  plat_pandora.h  plat_s60.h  plat_sdl.h  plat_wiz.h
ios/gamewatch/gamewatch/: gamewatch-Info.plist  gamewatch-Prefix.pch  main.m
ios/gamewatch/gamewatch.xcodeproj/: project.pbxproj
ios/gamewatch/gamewatch.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/gamewatch/gamewatch/lib/SDL/include/: SDL_config.h  SDL_revision.h  SDL_revision.h.orig
m4/: ax_boost_filesystem.m4
pandora/: make_pnd.sh
pandora/gameandwatch/: PXML.xml
release/win32/: gameandwatch.iss  gamewatch.nsi
res/: Game & Watch.gpe  gameandwatch.mbm  gwresources.rc
sis/: gamewatch_carbide.pkg  gamewath_gcce_urel.pkg
src/: CMakeLists.txt  Makefile.am  device.cpp  device.h  gamelist.cpp  gamelist.h  gamewatch.cpp  gwdbg.h  gwdefs.h  menu.cpp  menu.h  platform.cpp  platform.h
src/devices/: dev_banana.cpp  dev_condor.cpp  dev_condor.h  dev_defendo.cpp  dev_defendo.h  dev_dkong.cpp  dev_dkong.h  dev_monkey.cpp  dev_monkey.h  dev_pancake.cpp  dev_pancake.h  dev_pirate.cpp  dev_rollerc.cpp  dev_rollerc.h  dev_sleepwlk.cpp  dev_sleepwlk.h  deveng_vtech.cpp  deveng_vtech.h  deveng_vtech_banana.cpp  deveng_vtech_banana.h  deveng_vtech_condor.cpp  deveng_vtech_condor.h  deveng_vtech_monkey.cpp  deveng_vtech_monkey.h
src/plat/: SDL_rwops_zzip.c  SDL_rwops_zzip.cpp  plat_android.cpp  plat_desktop.cpp  plat_desktop.h  plat_gp2x.cpp  plat_gp2x.h  plat_ios.cpp  plat_ios.mm  plat_pandora.cpp  plat_s60.cpp  plat_s60_launcher.cpp  plat_s60_launcher.hrh  plat_sdl.cpp  plat_sdl.h  plat_wiz.cpp
src/util/: anyoption.cpp
symbian/: bld.inf  gamewatch.mmp  gamewatch.rss  gamewatch_reg.rss
symbian/group/: bld.inf  gamewatch.mmp
symbian/inc/: gamewatch.h
symbian/s60v3/: gamewatch.mmp  gamewatch.rss  gamewatch_reg.rss
symbian/s60v3/sis/: gamewatch_carbide.pkg
symbian/sis/: gamewatch_EKA2.pkg  gamewatch_carbide.pkg
symbian/uiq3/: gamewatch.mmp  gamewatch.rss
symbian/uiq3/sis/: gamewatch_carbide.pkg
util/: zzip_mingw32_config.h
