# what flags you want to pass to the C compiler & linker
#CFLAGS = --pedantic -Wall -std=c99 -O2
#LDFLAGS =

# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
bin_PROGRAMS = gameandwatch
gameandwatch_SOURCES = device.cpp device.h gamelist.cpp gamelist.h gamewatch.cpp gwdefs.h menu.cpp menu.h platform.cpp platform.h \
	plat/plat_sdl.cpp plat/plat_sdl.h \
	devices/dev_defendo.cpp devices/dev_defendo.h devices/deveng_vtech_monkey.cpp devices/deveng_vtech_monkey.h devices/dev_monkey.cpp \
	devices/dev_monkey.h devices/dev_pirate.cpp devices/dev_pirate.h


